--- a/Austrália.html
+++ b/Austrália.html
@@ -7,10 +7,12 @@
 <head>
    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8"/>
+
     <h1 id="titulo" style="font-size:55px">Austrália: O "Brasil que deu certo"</h1>
 </head>
 <body>
-   <h1>Sobre o País</h1> 
+    
+   <h1 #sobre>Sobre o País</h1> 
    <h4 style="text-align:center">
     A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.
 De acordo com informações fornecidas pelas Nações Unidas, a população da Austrália atingiu recentemente 25.788.000 pessoas. Este é um país com uma grande população, mas uma população esparsa, ou seja, uma baixa densidade populacional (3,4 hab./km 2). Isso se deve às condições climáticas da maior parte 
@@ -18,7 +20,7 @@ do país, onde 20% do território é classificado como deserto. Como resultado, 
    </h4>
    <h1 >Pontos Turísticos</h1>
    <h2 class="subtitulo"> Sydney Opera House – New South Wales</h2>
-   <p style="text-align: center;">
+   <p style="text-align:center">
    
  Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.
 Sempre visito o Opera House no fim da tarde tendo em vista o pôr do sol maravilhoso da Baía de Sydney que acaba ficando muito melhor quando acompanhado de coquetéis no Opera Bar. Lembre-se que é possível fazer um tour guiado dentro do Opera House, o que possibilita ver de perto a deslumbrante arquitetura interior do lugar.
@@ -43,7 +45,10 @@ Coloque os seus sapatos mais confortáveis e aproveite o dia explorando as famos
 
 <h1> Como ir para a Austrália?</h1>
 <h2 class="batata">Preciso de visto para ir para a Austrália?</h2>
-<a href="https://www.dicasdeviagem.com/onde-fica-como-chegar-e-quando-ir-australia/">Referências</a>
+<p>
+    Sim! Brasileiros precisam de visto e o processo para a obtenção do mesmo, dependendo do tipo de visto, pode ser longo e cheio de picuinhas. Para saber mais visite o site da Embaixada da Austrália no Brasil.
+</p>
+<i><a href="https://www.dicasdeviagem.com/onde-fica-como-chegar-e-quando-ir-australia/">Site de referências</a> </i>
 
 
 </body>
