--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html> 
+<html>
     <title>
-        Australilândia    
+        Australilândia
 </title>
 
 <head>
@@ -11,17 +11,17 @@
     <h1 id="titulo" style="font-size:55px">Austrália: <span>O "Brasil que deu certo"</span></h1>
 </head>
 <body>
-    
-   <h1>Sobre o País</h1> 
+
+   <h1>Sobre o País</h1>
    <h4 style="text-align:center">
     A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.
-    De acordo com informações fornecidas pelas Nações Unidas, a população da Austrália atingiu recentemente 25.788.000 pessoas. Este é um país com uma grande população, mas uma população esparsa, ou seja, uma baixa densidade populacional (3,4 hab./km 2). Isso se deve às condições climáticas da maior parte 
+    De acordo com informações fornecidas pelas Nações Unidas, a população da Austrália atingiu recentemente 25.788.000 pessoas. Este é um país com uma grande população, mas uma população esparsa, ou seja, uma baixa densidade populacional (3,4 hab./km 2). Isso se deve às condições climáticas da maior parte
     do país, onde 20% do território é classificado como deserto. Como resultado, a maioria da população australiana vive nas cidades mais próximas da costa.
    </h4>
    <h1>Pontos Turísticos</h1>
    <h2 class="subtitulo"> Sydney Opera House – New South Wales</h2>
    <p style="text-align:center">
-   
+
  Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.
 Sempre visito o Opera House no fim da tarde tendo em vista o pôr do sol maravilhoso da Baía de Sydney que acaba ficando muito melhor quando acompanhado de coquetéis no Opera Bar. Lembre-se que é possível fazer um tour guiado dentro do Opera House, o que possibilita ver de perto a deslumbrante arquitetura interior do lugar.
 Os valores dos tours variam, começando em torno de $60 reais. Também vale adicionar ao roteiro o Royal Botanic Gardens, já que fica localizado bem juntinho ao Opera House.
@@ -39,13 +39,13 @@ Os valores dos tours variam, começando em torno de $60 reais. Também vale adic
 <p>A famosa trilha (ou caminhada) de Bondi para Coogee estende-se por 6 quilômetros ao longo da costa rochosa dos subúrbios ao leste de Sydney, com vista praticamente ininterrupta ao Oceano Pacífico. A trilha é dividida em 6 partes, cada uma com vistas espetaculares e praias maravilhosas.
     Além das praias, a trilha também passa por varias piscinas naturais, parques, cafés e restaurantes. A trilha pode ser acessada através de Bondi ou Coogee, então porque não começar em Coogee e deixar a melhor praia por ultimo? Recomendo levar um boné, água, vestir roupas e calcados confortais e passar bastante protetor solar.
 </p>
-<img src="images/austrália5.jpg" alt="Bondi to Coogee Walk" imagemap="#ponte" id="imageMaped">
+<img src="images/austrália5.jpg" alt="Bondi to Coogee Walk" usemap="#ponte" id="imageMaped">
     <map name="ponte">
-        <area href="https://www.bonditocoogeewalk.com/" coords="372,119,438,139,504,177,551,225,589,281,609,317,673,293,735,283,801,295,787,373,770,437,790,433,824,406,798,358,889,378,974,356,1036,358,1010,400,994,422,1038,444,1078,460,1075,516,2,515,2,471,47,463,62,476,102,474,102,458,113,430,133,412,120,399,148,389,178,350,131,252,214,254,280,268,270,196,347,212,339,193,387,211" shape="poly">
-        href="https://www.bonditocoogeewalk.com/">
+        <area shape="poly" coords="372,119,438,139,504,177,551,225,589,281,609,317,673,293,735,283,801,295,787,373,770,437,790,433,824,406,798,358,889,378,974,356,1036,358,1010,400,994,422,1038,444,1078,460,1075,516,2,515,2,471,47,463,62,476,102,474,102,458,113,430,133,412,120,399,148,389,178,350,131,252,214,254,280,268,270,196,347,212,339,193,387,211" href="https://www.bonditocoogeewalk.com/" >
     </map>
 <h2 class="subtitulo">Melbourne</h2>
-<p> Victoria Melbourne é a capital do estado de Victoria e é a segunda cidade mais populosa da Austrália. A cidade que foi, pelo sexto ano consecutivo, eleita a melhor do mundo para se viver é conhecida pelo seu vasto e diverso comercio assim como seus restaurantes, bares e ótima vidas noturna.
+<p> Victoria Melbour
+    margin: 20px auto;ne é a capital do estado de Victoria e é a segunda cidade mais populosa da Austrália. A cidade que foi, pelo sexto ano consecutivo, eleita a melhor do mundo para se viver é conhecida pelo seu vasto e diverso comercio assim como seus restaurantes, bares e ótima vidas noturna.
 Coloque os seus sapatos mais confortáveis e aproveite o dia explorando as famosas Laneways da cidade começando na Flinders Station, passando pela Degraves rumo a Little Bourke Street. A melhor forma de acessar Melbourne é de avião, já que o centro da cidade fica a mais ou menos 30 minutos do aeroporto.</p>
 <img class="images" src="images/austrália6.webp" alt="Melbourne">
 
@@ -66,7 +66,7 @@ Coloque os seus sapatos mais confortáveis e aproveite o dia explorando as famos
 <h3 class="visto">Visto de Estudo:</h3>
 <ul>
     <li>A duração do visto depende do curso que o estudante fará;</li>
-    <li>Concede permissão para trabalho.</li> 
+    <li>Concede permissão para trabalho.</li>
 </ul>
 <h2 class="batata">Requisitos para o Visto:</h2>
 <ul>
