--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 
 <head>
-   <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8"/>
 
     <h1 id="titulo" style="font-size:55px">Austrália: <span>O "Brasil que deu certo"</span></h1>
