--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <title>Australilândia</title>
     <link rel="stylesheet" href="style.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a class="navBtn" href="">Sobre</a>
-        <a class="navBtn" href="">Viagens</a>
-        <a class="navBtn" href="">Informações</a>
-        <a class="navBtn" href="">Alguma-Coisa</a>
-    </nav>
-    <h1 id="titulo" style="font-size:55px">Austrália: <span>O "Brasil que deu certo"</span></h1>
+  <header>
+      <nav>
+        <div class="navHalfs">
+          <h1 id="logo">Logo</h1>
+        </div>
+        <div class="navHalfs">
+          <a class="navBtn" href="">Sobre</a>
+          <a class="navBtn" href="">Viagens</a>
+          <a class="navBtn" href="">Informações</a>
+          <a class="navBtn" href="">Alguma-Coisa</a>
+        </div>
+      </nav>
+    </header>
+    <h1 id="titulo" style="font-size:55px">Austrália: <span>"O Brasil que deu certo"</span></h1>
    <h1>Sobre o País</h1>
    <h4>
     A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.
