--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Australilândia</title>
     <link rel="stylesheet" href="style.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
@@ -99,6 +99,20 @@
     O salário mínimo na Austrália é considerado um dos mais altos do mundo e, por consequência, a qualidade de vida no país é excelente.<br>
     O salário mínimo na Austrália é de 19,84 dólares australianos por hora, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.</p>
 
-<a href="https://www.dicasdeviagem.com/onde-fica-como-chegar-e-quando-ir-australia/"><i>Referências</i></a>
+  <form>
+    <h1 id="form">Formulário</h1>
+    <div class="row">
+      <label for="q1">O que você acha da Austrália?</label>
+      <input name="q1" id="q1" onfocus="this.value=''" value=""><br>
+    </div>
+    <div class="row">
+      <label for="q2">O que você acha desse site?</label>
+      <input name="q2" id="q2" onfocus="this.value=''" value=""><br>
+    </div>
+    <div class="row">
+      <label for="q3">Austrálianos comem carne de canguru?</label>
+      <input name="q3" id="q3" onfocus="this.value=''" value=""><br>
+    </div>
+  </form>
 </body>
 </html>
