--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p>A famosa trilha (ou caminhada) de Bondi para Coogee estende-se por 6 quilômetros ao longo da costa rochosa dos subúrbios ao leste de Sydney, com vista praticamente ininterrupta ao Oceano Pacífico. A trilha é dividida em 6 partes, cada uma com vistas espetaculares e praias maravilhosas.<br>
     Além das praias, a trilha também passa por varias piscinas naturais, parques, cafés e restaurantes. A trilha pode ser acessada através de Bondi ou Coogee, então porque não começar em Coogee e deixar a melhor praia por ultimo? Recomendo levar um boné, água, vestir roupas e calcados confortais e passar bastante protetor solar.
     </p>
-    <img src="images/austrália5.jpg" alt="Bondi to Coogee Walk" usemap="#ponte" id="imageMaped">
+    <img src="images/austrália5.jpg" alt="BonLearndi to Coogee Walk" usemap="#ponte" id="imageMaped">
     <map name="ponte">
         <area shape="poly" coords="211,68,237,74,269,89,289,103,317,131,339,161,351,183,397,163,457,165,457,183,449,223,441,247,455,245,469,233,457,205,483,207,511,219,569,203,595,205,563,255,619,261,619,295,1,294,1,262,63,258,75,246,69,224,91,224,105,198,75,141,165,149,153,115,197,123,195,107,225,122" href="https://www.bonditocoogeewalk.com/" >
     </map>
@@ -99,20 +99,7 @@
     O salário mínimo na Austrália é considerado um dos mais altos do mundo e, por consequência, a qualidade de vida no país é excelente.<br>
     O salário mínimo na Austrália é de 19,84 dólares australianos por hora, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.</p>
 
-  <form>
-    <h1 id="form">Formulário</h1>
-    <div class="row">
-      <label for="q1">O que você acha da Austrália?</label>
-      <input name="q1" id="q1" onfocus="this.value=''" value=""><br>
-    </div>
-    <div class="row">
-      <label for="q2">O que você acha desse site?</label>
-      <input name="q2" id="q2" onfocus="this.value=''" value=""><br>
-    </div>
-    <div class="row">
-      <label for="q3">Austrálianos comem carne de canguru?</label>
-      <input name="q3" id="q3" onfocus="this.value=''" value=""><br>
-    </div>
-  </form>
+    <h2 class="questions">Gostaria de responder algumas perguntas?</h2>
+    <a href="formulario.html" class="botão">Questionario</a>
 </body>
 </html>
