--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <header>
       <nav>
         <div class="navHalfs">
-          <h1 id="logo">Logo</h1>
+          <img href="logo.png" title="Logo">
         </div>
         <div class="navHalfs">
           <a class="navBtn" href="">Sobre</a>
           <a class="navBtn" href="">Viagens</a>
           <a class="navBtn" href="">Informações</a>
-          <a class="navBtn" href="">Alguma-Coisa</a>
+          <a class="navBtn" href="formulatio.html">Questionario</a>
         </div>
       </nav>
     </header>
@@ -61,7 +61,7 @@
 
     <h1>Como ir para a Austrália?</h1>
     <h2 class="instructions">Antes de tudo, Prepare seu passaporte!</h2>
-    <p> O passaporte é um documento obrigatório para poder viajar para outro país, tendo a função de te identificar quando estiver fora do país. Nele vão ser informados os seus vistos, autorizações,voos, e outras informações.</p>
+    <p>O passaporte é um documento obrigatório para poder viajar para outro país, tendo a função de te identificar quando estiver fora do país. Nele vão ser informados os seus vistos, autorizações,voos, e outras informações.</p>
     <h2 class="instructions">Preciso de visto para ir para a Austrália?</h2>
     <p> Sim, Brasileiros precisam de visto e o processo para a obtenção do mesmo, dependendo do tipo de visto, pode ser longo e cheio de picuinhas. Para saber mais visite o site da<a class="links" href="https://brazil.embassy.gov.au/">Embaixada da Austrália no Brasil.</a></p>
     <h2 class="instructions">Quais são os tipos de visto para entrar na Austrália?</h2>
@@ -98,8 +98,5 @@
     Para pessoas com nível intermediário de Inglês, pode trabalhar de Lavador de louça ou Barista em cafeterias e restaurantes em cidades menores, que precisem de funcionários.<br>
     O salário mínimo na Austrália é considerado um dos mais altos do mundo e, por consequência, a qualidade de vida no país é excelente.<br>
     O salário mínimo na Austrália é de 19,84 dólares australianos por hora, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.</p>
-
-    <h2 class="questions">Gostaria de responder algumas perguntas?</h2>
-    <a href="formulario.html" class="botão">Questionario</a>
 </body>
 </html>
