--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="navBtn" href="">Sobre</a>
           <a class="navBtn" href="">Viagens</a>
           <a class="navBtn" href="">Informações</a>
-          <a class="navBtn" href="formulatio.html">Questionario</a>
+          <a class="navBtn" href="formulario/formulario.html">Formulario</a>
         </div>
       </nav>
     </header>
@@ -39,18 +39,13 @@
     </p>
     <img class="images" src="images/austrália3.webp" alt="Sydney Opera House – New South Wales">
     <h2 class="subtitulo">Sydney Harbour Bridge – New South Wales</h2>
-    <p>Assim como o Opera House, a Sydney Harbour Bridge é um dos maiores ícones de Sydney e é a maior (não é a mais longa) ponte de arco feita aço no mundo. Completada em 1932, a ponte atravessa a Baía de Sydney e contem mais de 6 milhões de rebites feitos a mão (A MÃO!!!). As lendas de sua construção fascinam Sydneysiders (locais de Sydney) e pessoas do mundo inteiro.<br>
-    A ponte pode ser apreciada e explorada de varias formas. Um dos mais populares passeios é a BridgeClimb Sydney que permite ao visitante escalar a ponte ate o topo através de suas escadas laterais, o passeio fica entre $350 e $800 reais dependendo do dia e hora da escalada. Uma opção mais em conta é ver a ponte da Baía de Sydney perto do Opera House e atravessar a ponte a pé.
-    </p>
-    <picture>
-        <source media="(max-width:450px)" srcset="images/canguru.jpg">
-        <img class="images" id="jumpscare"src="images/austrália4.webp" alt="Sydney Harbour Bridge">
-    </picture>
+    <p>Assim como o Opera House, a Sydney Harbour Bridge é um dos maiores ícones de Sydney e é a maior ponte de arco feita aço no mundo. Completada em 1932, a ponte atravessa a Baía de Sydney e contem mais de 6 milhões de rebites feitos a mão. As lendas de sua construção fascinam Sydneysiders (locais de Sydney) e pessoas do mundo inteiro.</p>
+    <p>A ponte pode ser apreciada e explorada de varias formas. Um dos mais populares passeios é a BridgeClimb Sydney que permite ao visitante escalar a ponte ate o topo através de suas escadas laterais, o passeio fica entre $350 e $800 reais dependendo do dia e hora da escalada. Uma opção mais em conta é ver a ponte da Baía de Sydney perto do Opera House e atravessar a ponte a pé.</p>
     <h2 class="subtitulo">Bondi to Coogee Walk – New South Wales</h2>
     <p>A famosa trilha (ou caminhada) de Bondi para Coogee estende-se por 6 quilômetros ao longo da costa rochosa dos subúrbios ao leste de Sydney, com vista praticamente ininterrupta ao Oceano Pacífico. A trilha é dividida em 6 partes, cada uma com vistas espetaculares e praias maravilhosas.<br>
     Além das praias, a trilha também passa por varias piscinas naturais, parques, cafés e restaurantes. A trilha pode ser acessada através de Bondi ou Coogee, então porque não começar em Coogee e deixar a melhor praia por ultimo? Recomendo levar um boné, água, vestir roupas e calcados confortais e passar bastante protetor solar.
     </p>
-    <img src="images/austrália5.jpg" alt="BonLearndi to Coogee Walk" usemap="#ponte" id="imageMaped">
+    <img id="imageMaped" src="images/austrália5.jpg" alt="BonLearndi to Coogee Walk" usemap="#ponte">
     <map name="ponte">
         <area shape="poly" coords="211,68,237,74,269,89,289,103,317,131,339,161,351,183,397,163,457,165,457,183,449,223,441,247,455,245,469,233,457,205,483,207,511,219,569,203,595,205,563,255,619,261,619,295,1,294,1,262,63,258,75,246,69,224,91,224,105,198,75,141,165,149,153,115,197,123,195,107,225,122" href="https://www.bonditocoogeewalk.com/" >
     </map>
@@ -63,9 +58,9 @@
     <h2 class="instructions">Antes de tudo, Prepare seu passaporte!</h2>
     <p>O passaporte é um documento obrigatório para poder viajar para outro país, tendo a função de te identificar quando estiver fora do país. Nele vão ser informados os seus vistos, autorizações,voos, e outras informações.</p>
     <h2 class="instructions">Preciso de visto para ir para a Austrália?</h2>
-    <p> Sim, Brasileiros precisam de visto e o processo para a obtenção do mesmo, dependendo do tipo de visto, pode ser longo e cheio de picuinhas. Para saber mais visite o site da<a class="links" href="https://brazil.embassy.gov.au/">Embaixada da Austrália no Brasil.</a></p>
+    <p> Sim, Brasileiros precisam de visto e o processo para a obtenção do mesmo, dependendo do tipo de visto, pode ser longo e cheio de picuinhas. Para saber mais visite o site da <a class="links" href="https://brazil.embassy.gov.au/">Embaixada da Austrália no Brasil.</a></p>
     <h2 class="instructions">Quais são os tipos de visto para entrar na Austrália?</h2>
-    <p>Os principais vistos para austrália são o de Turismo e Estudo:</p>
+    <p>Um visto de viagem é um documento emitido por um país estrangeiro que fornece permissão para que você entrar no país. Abaixo estão os principais tipos de vistos para a australia:</p>
     <h3 class="vistos"> Visto de Turismo</h3>
     <ul>
         <li>Vale por 1 ano, mas só concede 3 meses de permanência;</li>
@@ -93,10 +88,12 @@
         <li>Aguardar a resposta da solicitação do visto.</li>
     </ul>
     <h2 class="instructions">Emprego e qualidade de vida</h2>
-    <p>Arranjar emprego não é fácil, e a Austrália não é uma exceção, a maioria dos migrantes vindos de outros países começam suas carreiras de trabalho na Austrália trabalhando em locais como restaurantes e obras.<br>
-    É sempre recomendável aprender inglês antes de ir para lá, porém nem todos fazem isso. Pessoas com nível de inglês básico é recomendado começarem em trabalhos que não exigem conversas complexas, como a limpeza em obras.<br>
-    Para pessoas com nível intermediário de Inglês, pode trabalhar de Lavador de louça ou Barista em cafeterias e restaurantes em cidades menores, que precisem de funcionários.<br>
-    O salário mínimo na Austrália é considerado um dos mais altos do mundo e, por consequência, a qualidade de vida no país é excelente.<br>
-    O salário mínimo na Austrália é de 19,84 dólares australianos por hora, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.</p>
+      <p>Arranjar emprego não é fácil, e a Austrália não é uma exceção, a maioria dos migrantes vindos de outros países começam suas carreiras de trabalho na Austrália trabalhando em locais como restaurantes e obras.É sempre recomendável aprender inglês antes de ir para lá, porém nem todos fazem isso.</p>
+    <ul>
+      <li>Pessoas com nível de inglês básico é recomendado começarem em trabalhos que não exigem conversas complexas, como a limpeza em obras.</li>
+      <li>Para pessoas com nível intermediário de Inglês, pode trabalhar de Lavador de louça ou Barista em cafeterias e restaurantes em cidades menores, que precisem de funcionários.</li>
+    </ul>
+      <p>O salário mínimo na Austrália é de 19,84 dólares australianos por hora, um dos mais altos do mundo, quase seis vezes mais que no Brasil. E por mais que o salário seja maior, a quantidade de horas que é trabalhada na Austrália é bem menor que no Brasil, podendo chegar até 38 horas semanais, na maioria das vezes.</p>
+    </ul>
 </body>
 </html>
