--- a/index.html
+++ b/index.html
@@ -13,30 +13,27 @@
   <header>
       <nav>
         <div class="navHalfs">
-          <img href="logo.png" title="Logo">
+          <img id="logo" src="/images/logo.png" title="Logo">
         </div>
         <div class="navHalfs">
           <a class="navBtn" href="">Sobre</a>
           <a class="navBtn" href="">Viagens</a>
           <a class="navBtn" href="">Informações</a>
-          <a class="navBtn" href="formulario/formulario.html">Formulario</a>
+          <a class="navBtn" href="formulario/formulario.html">Formulário</a>
         </div>
       </nav>
     </header>
-    <h1 id="titulo" style="font-size:55px">Austrália: <span>"O Brasil que deu certo"</span></h1>
+    <h1 id="titulo">Austrália: <span>"O Brasil que deu certo"</span></h1>
    <h1>Sobre o País</h1>
-   <h4>
-    A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.
+   <h4>A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.
     De acordo com informações fornecidas pelas Nações Unidas, a população da Austrália atingiu recentemente 25.788.000 pessoas. Este é um país com uma grande população, mas uma população esparsa, ou seja, uma baixa densidade populacional (3,4 hab./km 2). Isso se deve às condições climáticas da maior parte
     do país, onde 20% do território é classificado como deserto. Como resultado, a maioria da população australiana vive nas cidades mais próximas da costa.
    </h4>
    <h1>Pontos Turísticos</h1>
    <h2 class="subtitulo"> Sydney Opera House – New South Wales</h2>
-   <p style="text-align:left">
-    Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.<br>
-    Sempre visito o Opera House no fim da tarde tendo em vista o pôr do sol maravilhoso da Baía de Sydney que acaba ficando muito melhor quando acompanhado de coquetéis no Opera Bar. Lembre-se que é possível fazer um tour guiado dentro do Opera House, o que possibilita ver de perto a deslumbrante arquitetura interior do lugar.<br>
-    Os valores dos tours variam, começando em torno de $60 reais. Também vale adicionar ao roteiro o Royal Botanic Gardens, já que fica localizado bem juntinho ao Opera House.
-    </p>
+   <p>Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.<br>
+   Sempre visito o Opera House no fim da tarde tendo em vista o pôr do sol maravilhoso da Baía de Sydney que acaba ficando muito melhor quando acompanhado de coquetéis no Opera Bar. Lembre-se que é possível fazer um tour guiado dentro do Opera House, o que possibilita ver de perto a deslumbrante arquitetura interior do lugar.<br>
+   Os valores dos tours variam, começando em torno de $60 reais. Também vale adicionar ao roteiro o Royal Botanic Gardens, já que fica localizado bem juntinho ao Opera House.</p>
     <img class="images" src="images/austrália3.webp" alt="Sydney Opera House – New South Wales">
     <h2 class="subtitulo">Sydney Harbour Bridge – New South Wales</h2>
     <p>Assim como o Opera House, a Sydney Harbour Bridge é um dos maiores ícones de Sydney e é a maior ponte de arco feita aço no mundo. Completada em 1932, a ponte atravessa a Baía de Sydney e contem mais de 6 milhões de rebites feitos a mão. As lendas de sua construção fascinam Sydneysiders (locais de Sydney) e pessoas do mundo inteiro.</p>
