--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -9,7 +9,7 @@
   <body>
     <form>
       <div id="questionsDiv">
-        <h1>Formulário</h1>
+        <h1>Formulário:</h1>
         <div class="row">
           <label for="q1">O que você acha da Austrália?</label>
           <textarea name="q1" id="q1"></textarea>
@@ -23,7 +23,10 @@
           <textarea name="q3" id="q3"></textarea>
         </div>
       </div>
-      <input type="submit">
+      <div class="buttonsDiv">
+        <input title="Enviar Formulário" type="submit" value="Enviar">
+        <a href="../index.html">Voltar á página inicial</a>
+      </div>
     </form>
   </body>
 </html>
