--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="navHalfs">
-                <img id="logo" src="/images/logo.png" title="Logo">
+                <img id="logo" src="images/logo.png" title="Logo">
                 <h1>Australilândia</h1>
             </div>
             <div class="navHalfs">
