--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="formulario.css">
   </head>
   <body>
-    <form>
+    <form method="post">
       <div id="questionsDiv">
         <h1>Formulário:</h1>
         <div class="row">
@@ -25,7 +25,7 @@
       </div>
       <div class="buttonsDiv">
         <input title="Enviar Formulário" type="submit" value="Enviar">
-        <a href="../index.html">Voltar á página inicial</a>
+        <a href="../index.html">Página Inicial</a>
       </div>
     </form>
   </body>
