--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navHalfs">
                 <img id="logo" src="images/logo.png" title="Logo">
-                <h1>Australilândia</h1>
+                <h1 id="logoText">Australilândia</h1>
             </div>
             <div class="navHalfs">
                 <a class="navBtn actualPage" href="#0">Página Inicial</a>
@@ -24,26 +24,24 @@
             </div>
         </nav>
     </header>
-    <h1 style="color: red;">Austrália: <span style="color: blue;">"O Brasil que deu certo"</span></h1>
+    <h1 id="mainText">Austrália: <span style="color: blue;">"O Brasil que deu certo"</span></h1>
     <h1>Sobre o País</h1>
     <strong>A Austrália é um país insular localizado na Oceania, cobrindo 89,8% de todo o continente. Além disso, é o sexto maior país do mundo em extensão territorial, equivalente a 7.692.024 quilômetros quadrados. É banhado por dois oceanos: o Oceano Índico na costa oeste e o Oceano Pacífico na costa leste.De acordo com informações fornecidas pelas Nações Unidas, a população da Austrália atingiu recentemente 25.788.000 pessoas. Este é um país com uma grande população, mas uma população esparsa, ou seja, uma baixa densidade populacional (3,4 hab./km 2). Isso se deve às condições climáticas da maior parte do país, onde 20% do território é classificado como deserto. Como resultado, a maioria da população australiana vive nas cidades mais próximas da costa.</strong>
-  
+
     <h1>Pontos Turísticos</h1>
     <h2 class="subtitulo"> Sydney Opera House – New South Wales</h2>
-    <p>Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.<br>Sempre visito o Opera House no fim da tarde tendo em vista o pôr do sol maravilhoso da Baía de Sydney que acaba ficando muito melhor quando acompanhado de coquetéis no Opera Bar. Lembre-se que é possível fazer um tour guiado dentro do Opera House, o que possibilita ver de perto a deslumbrante arquitetura interior do lugar.<br>Os valores dos tours variam, começando em torno de $60 reais. Também vale adicionar ao roteiro o Royal Botanic Gardens, já que fica localizado bem juntinho ao Opera House.</p>
-    <img class="images" src="images/austrália3.webp" alt="Sydney Opera House – New South Wales">
+    <p>Localizado no Ponto Bennelong na Baía de Sydney, o Opera House é uma das mais famosas e distintas maravilhas arquitetônicas do século 20. Projetado e construído pelo arquiteto Dinamarquês Jørn Utzon, o Opera House com toda sua grandiosidade e geometria teve como inspiração a natureza, suas cores, funções e formas.<br>
+    Os valores dos tuor variam, começando em torno de $60 reais. Também vale adicionar ao roteiro o Royal Botanic Gardens, já que fica localizado bem juntinho ao Opera House.</p>
+    <img class="images" src="images/austrália5.jpg" alt="Sydney Opera House – New South Wales">
 
     <h2 class="subtitulo">Sydney Harbour Bridge – New South Wales</h2>
     <p>Assim como o Opera House, a Sydney Harbour Bridge é um dos maiores ícones de Sydney e é a maior ponte de arco feita aço no mundo. Completada em 1932, a ponte atravessa a Baía de Sydney e contem mais de 6 milhões de rebites feitos a mão. As lendas de sua construção fascinam Sydneysiders (locais de Sydney) e pessoas do mundo inteiro.</p>
     <p>A ponte pode ser apreciada e explorada de varias formas. Um dos mais populares passeios é a BridgeClimb Sydney que permite ao visitante escalar a ponte ate o topo através de suas escadas laterais, o passeio fica entre $350 e $800 reais dependendo do dia e hora da escalada. Uma opção mais em conta é ver a ponte da Baía de Sydney perto do Opera House e atravessar a ponte a pé.</p>
+    <img class="images" src="images/austrália4.webp" alt="Sydney Harbour Bridge">
 
     <h2 class="subtitulo">Bondi to Coogee Walk – New South Wales</h2>
     <p>A famosa trilha (ou caminhada) de Bondi para Coogee estende-se por 6 quilômetros ao longo da costa rochosa dos subúrbios ao leste de Sydney, com vista praticamente ininterrupta ao Oceano Pacífico. A trilha é dividida em 6 partes, cada uma com vistas espetaculares e praias maravilhosas.<br>Além das praias, a trilha também passa por varias piscinas naturais, parques, cafés e restaurantes. A trilha pode ser acessada através de Bondi ou Coogee, então porque não começar em Coogee e deixar a melhor praia por ultimo? Recomendo levar um boné, água, vestir roupas e calcados confortais e passar bastante protetor solar.</p>
-
-    <img id="imageMaped" src="images/austrália5.jpg" alt="BonLearndi to Coogee Walk" usemap="#ponte">
-    <map name="ponte">
-      <area shape="poly" coords="211,68,237,74,269,89,289,103,317,131,339,161,351,183,397,163,457,165,457,183,449,223,441,247,455,245,469,233,457,205,483,207,511,219,569,203,595,205,563,255,619,261,619,295,1,294,1,262,63,258,75,246,69,224,91,224,105,198,75,141,165,149,153,115,197,123,195,107,225,122" href="https://www.bonditocoogeewalk.com/" >
-    </map>
+    <img id="imageMaped" src="images/austrália3.webp" alt="BonLearndi to Coogee Walk" usemap="#ponte">
 
     <h2 class="subtitulo">Melbourne</h2>
     <p>Victoria Melbourne é a capital do estado de Victoria e é a segunda cidade mais populosa da Austrália. A cidade que foi, pelo sexto ano consecutivo, eleita a melhor do mundo para se viver é conhecida pelo seu vasto e diverso comercio assim como seus restaurantes, bares e ótima vidas noturna.<br>Coloque os seus sapatos mais confortáveis e aproveite o dia explorando as famosas Laneways da cidade começando na Flinders Station, passando pela Degraves rumo a Little Bourke Street. A melhor forma de acessar Melbourne é de avião, já que o centro da cidade fica a mais ou menos 30 minutos do aeroporto.</p>
@@ -51,7 +49,7 @@
 
     <h1>Como ir para a Austrália?</h1>
     <h2 class="subtitulo">Antes de tudo, Prepare seu passaporte!</h2>
-    <p>O passaporte é um documento obrigatório para poder viajar para outro país, tendo a função de te identificar quando estiver fra do país. Nele vão ser informados os seus vistos, autorizações,voos, e outras informações.</p>
+    <p>O passaporte é um documento obrigatório para poder viajar para outro país, tendo a função de te identificar quando estiver fora do país. Nele vão ser informados os seus vistos, autorizações,voos, e outras informações.</p>
 
     <h2 class="subtitulo">Preciso de visto para ir para a Austrália?</h2>
     <p> Sim, Brasileiros precisam de visto e o processo para a obtenção do mesmo, dependendo do tipo de visto, pode ser longo e cheio de picuinhas. Para saber mais visite o site da <a class="embassy" href="https://brazil.embassy.gov.au/">Embaixada da Austrália no Brasil.</a></p>
